Switching to pymssql to see if it works

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 SQL_SERVER = purenvqld.database.windows.net
 SQL_DB = Feedback
-SQL_USER = rpope@purenv.au
-SQL_PASSWORD = Red-R0ck6341
+SQL_USER = NarangbaAPIFeedbackFunction
+SQL_PASSWORD = Fe3db4ck4P1N4rangba
