--- a/.github/workflows/main_narangba-backend.yml
+++ b/.github/workflows/main_narangba-backend.yml
@@ -35,7 +35,9 @@ jobs:
           source venv/bin/activate
 
       - name: Install dependencies
-        run: pip install -r requirements.txt --target=".python_packages/lib/site_packages"
+        run: |
+          pip install -r requirements.txt
+          pip freeze > requirements.txt
 
       # Optional: Add step to run tests here
 
