Desperately tryna install pyJWT

--- a/.github/workflows/main_narangba-backend.yml
+++ b/.github/workflows/main_narangba-backend.yml
@@ -34,10 +34,13 @@ jobs:
           python -m venv venv
           source venv/bin/activate
 
+      - name: Remove old packages
+        run: rm -rf .python_packages
+
       - name: Install dependencies
         run: |
-          pip install -r requirements.txt
-          pip freeze > requirements.txt
+          pip install -r requirements.txt --target=".python_packages/lib/site-packages"
+
 
       # Optional: Add step to run tests here
 
