--- a/.github/workflows/main_narangba-backend.yml
+++ b/.github/workflows/main_narangba-backend.yml
@@ -1,3 +1,7 @@
+# Docs for the Azure Web Apps Deploy action: https://github.com/azure/functions-action
+# More GitHub Actions for Azure: https://github.com/Azure/actions
+# More info on Python, GitHub Actions, and Azure Functions: https://aka.ms/python-webapps-actions
+
 name: Deploy Python Azure Function App
 
 on:
@@ -24,11 +28,9 @@ jobs:
       - name: Install dependencies for linting/tests (optional)
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
-
-      # Optional: Add steps to run tests here
-
-      - name: 'Login to Azure'
+          pip install -r requirements.txt   
+        
+      - name: Login to Azure
         uses: azure/login@v1
         with:
           client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_EEAC754E753947E4A209020B4DF989BF }}
@@ -37,7 +39,9 @@ jobs:
 
       - name: 'Deploy to Azure Functions'
         uses: Azure/functions-action@v1
+        id: deploy-to-function
         with:
-          app-name: 'Narangba-Backend'           # Your Function App name in Azure
-          package: '.'                          # Deploy current directory (source + requirements.txt)
-          slot-name: 'narangba'                 # optional slot name, remove if not using slots
+          app-name: 'Narangba-Backend'
+          slot-name: 'narangba'
+          package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
+          
