--- a/.github/workflows/main_narangba-backend.yml
+++ b/.github/workflows/main_narangba-backend.yml
@@ -42,7 +42,7 @@ jobs:
       # Optional: Add step to run tests here
 
       - name: Zip artifact for deployment
-        run: zip -r release.zip . -x 
+        run: zip -r release.zip . -x "venv/*"
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
