--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,8 @@ azure-identity
 python-tds
 requests_toolbelt
 requests
-cryptography
+cryptography==41.0.7
 sqlalchemy
 pymssql
-sendgrid
+sendgrid==6.11.0
 glibc
