--- a/.github/workflows/main_narangba-backend-new.yml
+++ b/.github/workflows/main_narangba-backend-new.yml
@@ -18,37 +18,33 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: read #This is required for actions/checkout
+      contents: read
 
     steps:
-      - name: Checkout repository
+      - name: 🧾 Checkout repository
         uses: actions/checkout@v4
 
-      - name: Setup Python version
+      - name: 🐍 Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: ${{ env.PYTHON_VERSION }}
 
-      - name: Create and start virtual environment
+      - name: 🧼 Clean old packages
+        run: rm -rf .python_packages
+
+      - name: 📦 Install dependencies to .python_packages
         run: |
-          python -m venv venv
-          source venv/bin/activate
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt --target=".python_packages/lib/site-packages"
 
-      - name: Install dependencies
-        run: pip install -r requirements.txt
+      - name: 📁 Zip entire app for deployment (including hidden dirs like .python_packages)
+        run: zip -r release.zip . -x "venv/*"
 
-      # Optional: Add step to run tests here
-
-      - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
-
-      - name: Upload artifact for deployment job
+      - name: ☁️ Upload artifact for deployment
         uses: actions/upload-artifact@v4
         with:
           name: python-app
-          path: |
-            release.zip
-            !venv/
+          path: release.zip
 
   deploy:
     runs-on: ubuntu-latest
@@ -64,16 +60,14 @@ jobs:
           name: python-app
 
       - name: Unzip artifact for deployment
-        run: |
-          unzip release.zip
-          rm release.zip
+        run: unzip release.zip     
         
       - name: Login to Azure
-        uses: azure/login@v2
+        uses: azure/login@v1
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_2A732DA02B5740C7BBDAE73C85D909C3 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_B0165734A5974EE89942198AC7062E1C }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_F24D865E83A34276AF35934AC9D7099A }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_EEAC754E753947E4A209020B4DF989BF }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_83118520E76540439BA343AE84F3CF3B }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_3AAAF7F9CC034087B4F19B65E3399D18 }}
 
       - name: 'Deploy to Azure Functions'
         uses: Azure/functions-action@v1
